--- a/src/components/General/Button/Button.module.scss
+++ b/src/components/General/Button/Button.module.scss
@@ -19,28 +19,28 @@
     width: 100%;
   }
 
-    &:hover {
-        background-color: #0024CB;
-    }
+  &:hover {
+    background-color: #0024cb;
+  }
 
-    &_disabled {
-        pointer-events: none;
-        opacity: 0.7;
-    }
+  &_disabled {
+    pointer-events: none;
+    opacity: 0.7;
+  }
 }
 
 .container {
-    position: relative;
-    display: flex;
-    align-items: center;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .icon {
-    transition: all 0.1s;
+  transition: all 0.1s;
 
-    &_hidden {
-        opacity: 0;
-    }
+  &_hidden {
+    opacity: 0;
+  }
 }
 
 .loader {
