--- a/src/components/General/Dropdown/Dropdown.module.scss
+++ b/src/components/General/Dropdown/Dropdown.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
   position: relative;
-  width: 100%;
 }
 
 .selectBox {
@@ -14,12 +13,20 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  font-size: 16px;
   transition: border 0.2s;
 
-  // &:hover {
-  //   border-color: #98a0af;
-  // }
+  overflow: hidden;
+  color: var(--Text-Primary, #121922);
+  text-overflow: ellipsis;
+
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+
+  &:hover {
+    border-color: #002cfb;
+  }
 
   &:focus {
     border-color: #002cfb;
