--- a/src/components/Transaction/Transaction.module.scss
+++ b/src/components/Transaction/Transaction.module.scss
@@ -83,7 +83,7 @@
   margin-bottom: 12px;
 
   &::before {
-    content: "";
+    content: '';
     grid-column: 1 / 2;
   }
 
@@ -217,6 +217,10 @@
     display: flex;
     align-items: flex-end;
     gap: 6px;
+  }
+
+  :nth-child(2) {
+    margin-bottom: 0;
   }
 }
 
