--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,5 +1,5 @@
 .root {
-  table-layout: fixed;
+  // table-layout: fixed;
   padding: 0 28px 20px 28px;
   width: 100%;
   max-width: 100%;
@@ -10,7 +10,11 @@
   color: var(--Text-Primary, #121922);
 
   .dataRow:hover {
-    background-color: #eff4fb;
+    background-color: #eaf0fa;
+    .deleteWrapper {
+      opacity: 1;
+      pointer-events: auto;
+    }
   }
 
   th,
@@ -63,4 +67,96 @@
   .narrow {
     width: 150px;
   }
+}
+.tag {
+  display: inline-block;
+  padding: 6px 16px;
+  border-radius: 8px;
+  background-color: #e0f7f0;
+  color: #28a879;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  &_red {
+    background-color: #fee9ef;
+    color: #cc0101;
+  }
+
+  &_grey {
+    background-color: #f1f4f9;
+    color: #71869d;
+  }
+}
+
+.wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.iconButton {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  fill: #0047ff;
+}
+
+.accountOthers {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.grayText {
+  color: #71869d !important;
+}
+
+.deleteWrapper {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 4px;
+  background-color: #eff4fb;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+.deleteCell {
+  padding: 0 !important;
+}
+.deleteIconButton {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .deleteIconRed {
+    display: none;
+  }
+
+  &:hover {
+    .deleteIcon {
+      display: none;
+    }
+    .deleteIconRed {
+      display: block;
+    }
+  }
+}
+.contrAgents {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
 }
