--- a/src/components/General/DownloadButton/DownloadButton.module.scss
+++ b/src/components/General/DownloadButton/DownloadButton.module.scss
@@ -11,7 +11,7 @@
   text-decoration: none;
 
   &:hover {
-    opacity: 0.8;
+    color: #0024cb;
   }
 }
 
@@ -19,7 +19,6 @@
   width: 24px;
   height: 24px;
   margin-right: 4px;
-  fill: currentColor;
 }
 
 .text {
