--- a/src/components/General/Dropdown/Dropdown.module.scss
+++ b/src/components/General/Dropdown/Dropdown.module.scss
@@ -3,6 +3,7 @@
 }
 
 .selectBox {
+  height: 40px;
   border: 1px solid rgba(216, 228, 251, 0.55);
 
   padding: 10px 40px 10px 12px;
@@ -36,10 +37,6 @@
 .selectBox .value {
   color: black;
 }
-
-// .value {
-//   color: black !important;
-// }
 
 .placeholder {
   color: #98a0af;
@@ -87,4 +84,12 @@
     background-color: rgba(212, 223, 243, 0.17);
     color: black;
   }
+}
+.label {
+  color: #71869d;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  margin-bottom: 6px;
 }
