--- a/src/components/General/Tooltip/Tooltip.module.scss
+++ b/src/components/General/Tooltip/Tooltip.module.scss
@@ -1,5 +1,4 @@
 .root {
-  position: absolute;
   z-index: 3;
   padding: 4px 8px;
   border-radius: 4px;
@@ -22,10 +21,13 @@
   &_open {
     visibility: visible;
     opacity: 1;
+    z-index: 9999;
   }
 
   &_center {
     left: 50%;
     transform: translateX(-50%);
+    position: absolute;
+    top: calc(100% + 8px);
   }
 }
