--- a/src/components/ModalManager/modals/ChangeDetail/ChangeDetail.module.scss
+++ b/src/components/ModalManager/modals/ChangeDetail/ChangeDetail.module.scss
@@ -1,22 +1,20 @@
 .modal {
   padding: 20px 24px;
-  text-align: right;
   font-family: Inter;
-
   width: 500px;
-  &_header {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .header {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: 16px;
+    justify-content: start;
     height: 40px;
   }
+
   .titleWrapper {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-  }
-  .title {
     display: flex;
     align-items: center;
     gap: 6px;
@@ -24,14 +22,14 @@
     font-weight: 600;
   }
 
-  .close {
+  .closeBtn {
     position: absolute;
-    top: 50%;
     right: 0;
+    top: 50%;
     transform: translateY(-50%);
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
   }
 }
