--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -30,6 +30,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     p {
       font-weight: 400;
@@ -159,4 +162,10 @@
   align-items: center;
   justify-content: center;
   gap: 4px;
+}
+.shrinkable {
+  max-width: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
