--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -14,5 +14,11 @@
   justify-content: space-between;
   align-items: center;
 }
-.container {
+.queryPanel {
+  display: flex;
+  justify-content: space-between;
+}
+.filters {
+  display: flex;
+  gap: 8px;
 }
