wip: фильтры, заменен tooltip, декомпозиция table

--- a/src/components/ModalManager/modals/Transactions/Transaction.module.scss
+++ b/src/components/ModalManager/modals/Transactions/Transaction.module.scss
@@ -2,7 +2,7 @@
   padding: 20px 24px;
   width: 700px;
   font-family: Inter;
-  &_header {
+  .modalHeader {
     position: relative;
     display: flex;
     align-items: center;
