--- a/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
+++ b/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
@@ -8,7 +8,7 @@
   gap: 12px;
   align-items: flex-start;
 
-  &_header {
+  .modalHeader {
     width: 100%;
     position: relative;
     display: flex;
