--- a/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
+++ b/src/components/ModalManager/modals/AccountInfo/AccountInfo.module.scss
@@ -153,23 +153,54 @@
 .controlSection {
   display: flex;
   flex-direction: column;
+}
+.controlBtn {
+  overflow: hidden;
+  transition: all 0.7s ease;
+  height: 0;
+  opacity: 0;
+  justify-content: flex-end;
+  display: flex;
+  align-items: flex-end;
+  gap: 6px;
 
-  .controlBtn {
-    justify-content: flex-end;
-    display: flex;
-    align-items: flex-end;
-    gap: 6px;
+  &_vis {
+    opacity: 1;
+    height: 40px;
+  }
+}
+
+.activateBtn {
+  width: 0;
+  opacity: 0;
+  transition: all 0.7s ease;
+  height: 0;
+  overflow: hidden;
+  padding: 0;
+  &_vis {
+    opacity: 1;
+    width: 100%;
+    height: 40px;
   }
 }
 .link {
   cursor: pointer;
-  height: 40px;
+
   display: inline-flex;
   align-items: center;
   gap: 4px;
   color: #002cfb;
   font-weight: 500;
   text-decoration: none;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s ease;
+
+  &_vis {
+    height: 40px;
+    opacity: 1;
+  }
 
   .count {
     border-radius: 9px;
@@ -189,6 +220,17 @@
 .switchWrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 6px;
+  gap: 4px;
+  color: #002cfb;
+  font-weight: 500;
+  text-decoration: none;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.3s ease;
+
+  &_vis {
+    height: auto;
+    opacity: 1;
+  }
 }
