--- a/src/components/TableSceleton/TableSceleton.module.scss
+++ b/src/components/TableSceleton/TableSceleton.module.scss
@@ -1,57 +1,40 @@
 .root {
-  table-layout: fixed;
+  padding: 0 28px 20px 28px;
   width: 100%;
-  border-spacing: 0;
+  max-width: 100%;
   background-color: #fff;
   border-radius: 8px;
-  overflow: hidden;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.15s;
-
-  &_vis {
-    visibility: visible;
-    opacity: 1;
-  }
+  border-spacing: 0;
+  color: var(--Text-Primary, #121922);
 
   th,
   td {
-    padding: 16px 20px 16px 0;
+    height: 50px;
+    padding: 12px 20px 12px 0;
     white-space: nowrap;
-    overflow: hidden;
     text-align: start;
     border-bottom: 1px solid #eff4fb;
-
-    p {
-      font-size: 14px;
-      font-weight: 400;
-      width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      text-align: start;
-
-      span {
-        color: #71869d;
-      }
-    }
-  }
-
-  th {
-    color: #71869d;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
   }
 
-  tr {
-    padding: 0 20px;
-    height: 50px;
-    display: flex;
-    width: 100%;
+  th {
+    color: #71869d;
   }
-}
 
-.row {
-  display: flex;
-  width: 100%;
+  td {
+    color: #121922;
+  }
+
+  &_vis {
+    opacity: 1;
+  }
+
+  &_fetch td {
+    opacity: 0.6;
+    pointer-events: none;
+  }
 }
