--- a/src/components/Filters/DateFilter/DateMenu/DateMenu.module.scss
+++ b/src/components/Filters/DateFilter/DateMenu/DateMenu.module.scss
@@ -9,8 +9,8 @@
   z-index: 2;
   display: flex;
   justify-content: space-between;
-  background: #FFF;
-  box-shadow: 0px 0px 10px 0px rgba(0, 32, 51, 0.10);
+  background: #fff;
+  box-shadow: 0px 0px 10px 0px rgba(0, 32, 51, 0.1);
   transition: all 0.2s ease-in-out;
   transform: scale(0.7);
   opacity: 0;
@@ -25,7 +25,7 @@
 
 .list {
   width: 156px;
-  border-right: 1px solid #ECF2FC;
+  border-right: 1px solid #ecf2fc;
   padding: 10px 0;
 }
 
@@ -33,7 +33,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
-  color: #71869D;
+  color: #71869d;
   cursor: pointer;
   padding: 8px 16px;
   transition: all 0.15s;
@@ -63,7 +63,7 @@
   border-radius: 4px;
   height: 20px;
   flex-shrink: 0;
-  background-color: #FFF;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
