--- a/src/components/Filters/DateFilter/DateMenu/DatePickerСhoose/DatePickerСhoose.scss
+++ b/src/components/Filters/DateFilter/DateMenu/DatePickerСhoose/DatePickerСhoose.scss
@@ -4,7 +4,7 @@
   font-family: inherit !important;
 
   &__header {
-    background-color: #FFF;
+    background-color: #fff;
     border-bottom: none;
     width: 272px;
     padding: 16px 12px 2px 12px;
@@ -29,10 +29,9 @@
       transition: all 0.15s;
     }
 
-
     &:hover {
       .react-datepicker__navigation-icon::before {
-        border-color: #002CFB;
+        border-color: #002cfb;
       }
     }
   }
@@ -50,7 +49,7 @@
 
     &:hover {
       border-radius: 50% !important;
-      background-color: #ECF2FC !important;
+      background-color: #ecf2fc !important;
     }
 
     &--keyboard-selected {
@@ -76,26 +75,26 @@
     }
 
     &--today {
-      color: #002CFB;
+      color: #002cfb;
     }
 
     &--selected {
-      background-color: #002CFB !important;
+      background-color: #002cfb !important;
       color: #fff;
 
       &:hover {
-        background-color: #0024CB !important;
+        background-color: #0024cb !important;
         color: #fff;
       }
     }
 
     &--range-end,
     &--range-start {
-      background-color: #002CFB !important;
+      background-color: #002cfb !important;
       color: #fff;
 
       &:hover {
-        background-color: #0024CB !important;
+        background-color: #0024cb !important;
         color: #fff;
       }
     }
@@ -122,16 +121,14 @@
 
     &--selecting-range-start,
     &--selecting-range-end {
-      background-color: #002CFB !important;
+      background-color: #002cfb !important;
       color: #fff !important;
 
-
       &:hover {
-        background-color: #002CFB !important;
+        background-color: #002cfb !important;
         color: #fff !important;
         border-top-left-radius: 0 !important;
         border-bottom-left-radius: 0 !important;
-
       }
     }
 
@@ -146,22 +143,24 @@
     }
 
     &--in-range:not(.react-datepicker__day--range-end, .react-datepicker__day--range-start) {
-      background-color: #ECF2FC;
-      color: #0024CB;
+      background-color: #ecf2fc;
+      color: #0024cb;
       border-radius: 0 !important;
 
       &:hover {
-        background-color: #002CFB !important;
+        background-color: #002cfb !important;
         color: #fff;
         border-radius: 2px !important;
       }
     }
 
-    &--in-selecting-range:not(.react-datepicker__day--in-selecting-range-end,
-      .react-datepicker__day--in-selecting-range-start) {
-      background-color: #ECF2FC;
+    &--in-selecting-range:not(
+        .react-datepicker__day--in-selecting-range-end,
+        .react-datepicker__day--in-selecting-range-start
+      ) {
+      background-color: #ecf2fc;
       border-radius: 0;
-      color: #0024CB;
+      color: #0024cb;
     }
   }
 }
