--- a/src/components/Filters/TypeFilter/TypeFilters.module.scss
+++ b/src/components/Filters/TypeFilter/TypeFilters.module.scss
@@ -31,8 +31,8 @@
 .block {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-bottom: 20px;
+  // gap: 20px;
+  // margin-bottom: 20px;
 }
 .blockTitle {
   height: 30px;
@@ -48,4 +48,13 @@
   display: flex;
   align-items: center;
   gap: 10px;
+}
+.item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding-right: 20px;
+  margin-right: 20px;
+  height: 40px;
+  cursor: pointer;
 }
