--- a/src/components/Filters/ActivityFilter/ActivitiFilter.module.scss
+++ b/src/components/Filters/ActivityFilter/ActivitiFilter.module.scss
@@ -49,3 +49,11 @@
   align-items: center;
   gap: 10px;
 }
+.item {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  margin-bottom: 10px;
+  gap: 12px;
+  cursor: pointer;
+}
