--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -11,173 +11,8 @@
   color: var(--Text-Primary, #121922);
 }
 
-//   th,
-//   td {
-//     height: 50px;
-//     // padding: 0 20px 0 0;
-//     line-height: 50px;
-//     white-space: nowrap;
-//     text-align: start;
-//     border-bottom: 1px solid #eff4fb;
-//     padding: 12px 20px 12px 20px;
-//     overflow: hidden;
-//     text-overflow: ellipsis;
-//     font-size: 14px;
-//     font-weight: 400;
-//     line-height: 18px;
-
-//     p {
-//       font-weight: 400;
-//       overflow: hidden;
-//       text-overflow: ellipsis;
-
-//       span {
-//         color: #71869d;
-//       }
-//     }
-//   }
-
-//   th {
-//     color: #71869d;
-//   }
-
-//   td {
-//     color: #121922;
-//   }
-
-//   &_anim {
-//     opacity: 1;
-//   }
-
-//   &_fetch td {
-//     opacity: 0.6;
-//     pointer-events: none;
-//   }
-
-//   .wide {
-//     width: 100%;
-//   }
-
-//   .narrow {
-//     width: 150px;
-//   }
-// }
-
-.tag {
-  display: inline-block;
-  padding: 4px 10px;
-  border-radius: 8px;
-  background-color: #e0f7f0;
-  color: #28a879;
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-
-  &_red {
-    background-color: #fee9ef;
-    color: #cc0101;
-  }
-
-  &_grey {
-    background-color: #f1f4f9;
-    color: #71869d;
-  }
-}
-
-// .wrapper {
-//   position: relative;
-//   display: inline-block;
-// }
-
-// .iconButton {
-//   background: none;
-//   border: none;
-//   padding: 0;
-//   cursor: pointer;
-// }
-
-// .icon {
-//   width: 24px;
-//   height: 24px;
-//   fill: #0047ff;
-// }
-
-// .accountOthers {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   gap: 10px;
-// }
-
-// .grayText {
-//   color: #71869d !important;
-// }
-
-.deleteWrapper {
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.2s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  background-color: #eff4fb;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-}
-
-// .deleteCell {
-//   padding: 0 0 0 8px !important;
-// }
-
-.deleteIconButton {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-
-  .deleteIconRed {
-    display: none;
-  }
-
-  &:hover {
-    .deleteIcon {
-      display: none;
-    }
-
-    .deleteIconRed {
-      display: block;
-    }
-  }
-}
-
-// .shrinkable {
-//   max-width: 1px;
-//   overflow: hidden;
-//   text-overflow: ellipsis;
-//   white-space: nowrap;
-// }
-.agents {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-}
-// .amountCell {
-//   text-align: right;
-//   margin-right: 40px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: flex-end;
-// }
-// .copyCell {
-//   text-align: right;
-// }
-
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///
 .gridRow {
   display: grid;
   align-items: center;
@@ -215,8 +50,8 @@
       minmax(100px, 100px) // Счет
       minmax(200px, 2fr) // Файл
       minmax(200px, 1fr) // Кто загрузил
-      minmax(200px, 1fr) // Должность
-      minmax(180px, 180px); // Распознана/Не распознана
+      minmax(100px, 1fr) // Должность
+      minmax(150px, 150px); // Распознана/Не распознана
 
     cursor: default;
   }
@@ -238,12 +73,11 @@
     }
   }
 }
-
 .gridCell {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding: 16px 20px 16px;
+  padding: 16px 20px 16px 0;
 
   &.right {
     text-align: right;
@@ -265,8 +99,17 @@
   @extend .gridRow;
   font-weight: 500;
   color: #71869d;
+
+  &:hover {
+    background-color: transparent !important;
+
+    .deleteWrapper {
+      opacity: 0 !important;
+      pointer-events: none !important;
+    }
+  }
   > div {
-    padding: 16px 20px 16px;
+    padding: 16px 20px 16px 0px;
   }
 }
 
@@ -275,4 +118,67 @@
   align-items: center;
   gap: 4px;
   color: #e10d0d;
+}
+.tag {
+  display: inline-block;
+  padding: 4px 10px;
+  border-radius: 8px;
+  background-color: #e0f7f0;
+  color: #28a879;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+
+  &_red {
+    background-color: #fee9ef;
+    color: #cc0101;
+  }
+
+  &_grey {
+    background-color: #f1f4f9;
+    color: #71869d;
+  }
+}
+
+.deleteWrapper {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  background-color: #eff4fb;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.deleteIconButton {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  .deleteIconRed {
+    display: none;
+  }
+
+  &:hover {
+    .deleteIcon {
+      display: none;
+    }
+
+    .deleteIconRed {
+      display: block;
+    }
+  }
+}
+.agents {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
 }
