feat: фильтры реквизиты и заказчик. wip: модалка Transaction

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -28,8 +28,8 @@
     grid-template-columns: minmax(100px, 100px) // Дата
       minmax(100px, 100px) // Номер
       minmax(250px, 250px) // Сумма
-      minmax(200px, 1fr) // Плательщик
-      minmax(150px, 1fr) // Получатель
+      minmax(200px, 1.5fr) // Плательщик
+      minmax(150px, 1.5fr) // Получатель
       minmax(250px, 2fr) // Назначение
       minmax(210px, 210px) // Вид
       minmax(80px, 80px); // Кнопка удалить
@@ -182,4 +182,18 @@
   align-items: center;
   justify-content: center;
   gap: 4px;
+}
+.noData {
+  text-align: left;
+  color: #71869d;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.error {
+  text-align: left;
+  color: #e10d0d;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
 }
