--- a/src/components/Filters/CompanyFilter/CompanyFilter.module.scss
+++ b/src/components/Filters/CompanyFilter/CompanyFilter.module.scss
@@ -1,103 +1,43 @@
-.container {
+.root {
   position: relative;
 }
 
-.modal {
-  width: 450px;
-  position: absolute;
-  z-index: 14;
-  right: 0;
-  top: 44px;
-  padding: 12px 0 20px;
+.filter {
+  position: relative;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 0 12px;
+  background-color: #fff;
   border-radius: 4px;
-  background: #fff;
-  box-shadow: 0px 0px 10px 0px rgba(0, 32, 51, 0.1);
-  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  transition: background-color 0.15s;
+
+  &:hover {
+    background-color: #f8fafd;
+  }
+
+  &_active {
+    color: #002cfb;
+  }
+}
+
+.modal {
+  position: absolute;
+  top: 44px;
+  right: 0;
+  z-index: 14;
   transform: scale(0.7);
   opacity: 0;
   visibility: hidden;
+  transition:
+    transform 0.2s ease-in-out,
+    opacity 0.2s ease-in-out;
 
   &_open {
     transform: scale(1);
     opacity: 1;
     visibility: visible;
   }
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 2;
-  visibility: hidden;
-
-  &_anim {
-    visibility: visible;
-  }
-}
-
-.headerTitle {
-  margin: 0 20px;
-  border-bottom: 1px solid #eaf0fa;
-  display: flex;
-  align-items: center;
-  height: 30px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  color: #71869d;
-}
-
-.listContainer {
-  margin-left: 20px;
-  max-height: 360px;
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-
-  span {
-    color: #71869d;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    margin: 6px 0;
-  }
-}
-
-.item {
-  display: flex;
-  gap: 12px;
-  padding: 6px 0;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  cursor: pointer;
-
-  span {
-    color: #71869d;
-  }
-}
-
-.check {
-  padding-top: 4px;
-}
-
-.block {
-  display: flex;
-  flex-direction: column;
-}
-
-.buttons {
-  margin-left: 20px;
-  margin-top: 20px;
-  display: flex;
-  gap: 12px;
-  width: 100%;
 }
