--- a/src/components/General/Combobox/Combobox.module.scss
+++ b/src/components/General/Combobox/Combobox.module.scss
@@ -12,8 +12,15 @@
   }
 
   .label {
-    font-weight: 500;
     margin-bottom: 4px;
+    overflow: hidden;
+    color: #121922;
+    text-overflow: ellipsis;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
   }
 
   .details {
@@ -44,24 +51,35 @@
   .details {
     margin-left: 8px;
     color: #6a7b92;
-    font-size: 12px;
+    font-size: 14px;
     white-space: nowrap;
   }
 }
 
 .error {
-  height: 16px;
-  margin-top: 7px;
+  margin-top: 0;
+  overflow: hidden;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  margin-top: 0;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 6px;
-
   color: var(--UI-Red, #e10d0d);
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
+  transition: all 0.2s ease;
+
+  &.active {
+    height: 16px;
+    opacity: 1;
+    visibility: visible;
+    margin-top: 7px;
+  }
 
   .icon {
     width: 16px;
